feat: add favicons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta name="description"
         content="A faithful implementation of the Bitcoin protocol, built for permanence. Not for continued development, but for preservation.">
     <meta name="theme-color" content="#0a0a0a">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Bitcoin Echo — The Last Implementation">
