--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         html {
             scroll-behavior: smooth;
             font-size: 16px;
+            overflow-x: hidden;
         }
 
         body {
@@ -107,6 +108,7 @@
             color: var(--color-text);
             line-height: 1.7;
             overflow-x: hidden;
+            max-width: 100vw;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
             transition: background-color 0.3s ease, color 0.3s ease;
@@ -183,6 +185,7 @@
         section {
             position: relative;
             z-index: 1;
+            overflow-x: hidden;
         }
 
         /* Navigation */
@@ -207,6 +210,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            width: 100%;
         }
 
         /* Theme Toggle */
@@ -318,6 +322,7 @@
             text-align: center;
             padding: 8rem 2rem 4rem;
             position: relative;
+            overflow: hidden;
         }
 
         .hero-symbol {
@@ -326,6 +331,7 @@
             margin-bottom: 3rem;
             position: relative;
             animation: fadeInUp 1.2s var(--ease-out) both;
+            overflow: visible;
         }
 
         .hero-symbol img {
