feat: use symbol as og image

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <meta property="og:description" content="A faithful implementation of the Bitcoin protocol, built for permanence.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bitcoinecho.org">
+    <meta property="og:image" content="https://bitcoinecho.org/bitcoin-echo-symbol.jpg">
+    <meta property="og:image:width" content="960">
+    <meta property="og:image:height" content="960">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bitcoin Echo — The Last Implementation">
+    <meta name="twitter:description" content="A faithful implementation of the Bitcoin protocol, built for permanence.">
+    <meta name="twitter:image" content="https://bitcoinecho.org/bitcoin-echo-symbol.jpg">
 
     <!-- Early theme detection to prevent flash -->
     <script>
