feat: improve og and twitter tags

--- a/index.html
+++ b/index.html
@@ -22,18 +22,26 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="Bitcoin Echo — The Last Implementation">
-    <meta property="og:description" content="A faithful implementation of the Bitcoin protocol, built for permanence.">
+    <meta property="og:description"
+        content="A complete Bitcoin protocol implementation in pure C, designed to freeze forever upon completion. Zero dependencies. Built for permanence, not continued development. bitcoinecho.org">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bitcoinecho.org">
+    <meta property="og:site_name" content="Bitcoin Echo">
+    <meta property="og:locale" content="en_US">
     <meta property="og:image" content="https://bitcoinecho.org/bitcoin-echo-symbol.jpg">
     <meta property="og:image:width" content="960">
     <meta property="og:image:height" content="960">
+    <meta property="og:image:alt" content="Bitcoin Echo symbol — a stylized B within a circuit-like design">
+    <meta property="og:image:type" content="image/jpeg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bitcoin Echo — The Last Implementation">
-    <meta name="twitter:description" content="A faithful implementation of the Bitcoin protocol, built for permanence.">
+    <meta name="twitter:description"
+        content="A complete Bitcoin protocol implementation in pure C, designed to freeze forever upon completion. Zero dependencies. Built for permanence, not continued development.">
     <meta name="twitter:image" content="https://bitcoinecho.org/bitcoin-echo-symbol.jpg">
+    <meta name="twitter:image:alt" content="Bitcoin Echo symbol — a stylized B within a circuit-like design">
+    <meta name="twitter:site" content="@bitcoinechoorg">
 
     <!-- Early theme detection to prevent flash -->
     <script>
