--- a/index.html
+++ b/index.html
@@ -1294,6 +1294,7 @@
                 <a href="mailto:echo@bitcoinecho.org" class="footer-link">echo@bitcoinecho.org</a>
                 <a href="https://github.com/bitcoinecho" target="_blank" rel="noopener noreferrer"
                     class="footer-link">GitHub</a>
+                <a href="/funding" class="footer-link">Funding</a>
             </div>
         </div>
     </footer>
