fix: make text selection highlighting visible in light mode
Use dark background for selection in light theme instead of white, making selected text clearly visible in both dark and light modes.

--- a/index.html
+++ b/index.html
@@ -1124,8 +1124,13 @@
         }
 
         /* Selection */
-        ::selection {
+        [data-theme="dark"] ::selection {
             background: rgba(255, 255, 255, 0.2);
+            color: var(--color-accent);
+        }
+
+        [data-theme="light"] ::selection {
+            background: rgba(0, 0, 0, 0.4);
             color: var(--color-accent);
         }
 
