feat: add `𝕏` links to footer

--- a/index.html
+++ b/index.html
@@ -1407,6 +1407,10 @@
                     </svg>
                     GitHub
                 </a>
+                <a href="https://x.com/bitcoinechoorg" target="_blank" rel="noopener noreferrer" class="cta-link">
+                    <span style="font-size: 1.25rem; line-height: 1;">𝕏</span>
+                    Follow
+                </a>
             </div>
         </div>
     </section>
@@ -1447,7 +1451,9 @@
                 <a href="mailto:echo@bitcoinecho.org" class="footer-link">echo@bitcoinecho.org</a>
                 <a href="https://github.com/bitcoinecho" target="_blank" rel="noopener noreferrer"
                     class="footer-link">GitHub</a>
-                <a href="/funding" class="footer-link">Funding</a>
+                <a href="https://x.com/bitcoinechoorg" target="_blank" rel="noopener noreferrer"
+                    class="footer-link">𝕏</a>
+                <a href="/funding" class="footer-link" style="margin-left: 1rem;">Funding</a>
             </div>
         </div>
     </footer>
