refactor: replace 'The Last Implementation' with 'Build once. Build right. Stop.' and add new OG image
- Update hero tagline in index.html
- Update all meta tags (og:title, twitter:title) across index.html and doc-template.php
- Correct OG image dimensions to 1200x628 (Twitter/X spec)
- Retitle manifesto to 'Why Bitcoin Echo Freezes'
- Update closing taglines in ROADMAP.md and GUI_ROADMAP.md
- Add new bitcoin-echo-og-image.png (1200x628px)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitcoin Echo — The Last Implementation</title>
+    <title>Bitcoin Echo — Build once. Build right. Stop.</title>
     <meta name="description"
         content="A faithful implementation of the Bitcoin protocol, built for permanence. Not for continued development, but for preservation.">
     <meta name="theme-color" content="#0a0a0a">
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Bitcoin Echo — The Last Implementation">
+    <meta property="og:title" content="Bitcoin Echo — Build once. Build right. Stop.">
     <meta property="og:description"
         content="A complete Bitcoin protocol implementation in pure C, designed to freeze forever upon completion. Zero dependencies. Built for permanence, not continued development. bitcoinecho.org">
     <meta property="og:type" content="website">
@@ -29,14 +29,14 @@
     <meta property="og:site_name" content="Bitcoin Echo">
     <meta property="og:locale" content="en_US">
     <meta property="og:image" content="https://bitcoinecho.org/bitcoin-echo-og-image.png">
-    <meta property="og:image:width" content="960">
-    <meta property="og:image:height" content="960">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="628">
     <meta property="og:image:alt" content="Bitcoin Echo symbol — a stylized B within a circuit-like design">
     <meta property="og:image:type" content="image/jpeg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Bitcoin Echo — The Last Implementation">
+    <meta name="twitter:title" content="Bitcoin Echo — Build once. Build right. Stop.">
     <meta name="twitter:description"
         content="A complete Bitcoin protocol implementation in pure C, designed to freeze forever upon completion. Zero dependencies. Built for permanence, not continued development.">
     <meta name="twitter:image" content="https://bitcoinecho.org/bitcoin-echo-og-image.png">
@@ -1196,7 +1196,7 @@
         </div>
         <h1 class="hero-title">
             Bitcoin Echo
-            <span>The Last Implementation</span>
+            <span>Build once. Build right. Stop.</span>
         </h1>
         <p class="hero-description">
             A faithful implementation of the Bitcoin protocol, built not for continued development—but for permanence.
