fix: add cache-busting parameter to OG image URLs
Forces X/Twitter to fetch new OG image by appending ?v=2 to image URLs

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://bitcoinecho.org">
     <meta property="og:site_name" content="Bitcoin Echo">
     <meta property="og:locale" content="en_US">
-    <meta property="og:image" content="https://bitcoinecho.org/bitcoin-echo-og-image.png">
+    <meta property="og:image" content="https://bitcoinecho.org/bitcoin-echo-og-image.png?v=2">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="628">
     <meta property="og:image:alt" content="Bitcoin Echo symbol — a stylized B within a circuit-like design">
@@ -39,7 +39,7 @@
     <meta name="twitter:title" content="Bitcoin Echo — Build once. Build right. Stop.">
     <meta name="twitter:description"
         content="A complete Bitcoin protocol implementation in pure C, designed to freeze forever upon completion. Zero dependencies. Built for permanence, not continued development.">
-    <meta name="twitter:image" content="https://bitcoinecho.org/bitcoin-echo-og-image.png">
+    <meta name="twitter:image" content="https://bitcoinecho.org/bitcoin-echo-og-image.png?v=2">
     <meta name="twitter:image:alt" content="Bitcoin Echo symbol — a stylized B within a circuit-like design">
     <meta name="twitter:site" content="@bitcoinechoorg">
 
